# muse-hii-regions

./: .gitignore  .pre-commit-config.yaml  00_core.ipynb  LICENSE  Makefile  README.md  README.org  all-mean-maps-multibin.sh  all-sigma-maps-multibin.sh  cloudytab.py  index.ipynb  main.py  multibin-map.py  multibin.org  muse-hii-regions.org  pyproject.toml  rebin_utils.py  requirements.txt  settings.ini
data/: 1621565610393O-result.json  1621565618518O-result.fits  1621565655827O-result.csv  30D_ABCD-raman-B033.fits  30D_ABCD-raman-B054.fits  (+2031 more)
data-atomic/: c-i-all-E-upper-lt-90000.txt  cloudy-h2-lines-sort-upper.csv  cloudy-h2-lines.csv  fe-i-all-E-upper-lt-30000.txt  fe-i-all-E-upper-lt-45000.txt  fe-i-all-E-upper-lt-60000.txt  fe-i-permitted-A-gt-1e6.txt
data-jesus/: BS_final.reg  YSO_final.reg  bkg2_final.reg  bkg_final.reg  muse-fov.reg  ngc346_LL1_map_33.4_SIII.fits  ngc346_LL1_map_34.8_SiII.fits  ngc346_LL1_map_35.1.fits  ngc346_LL1_map_cont_25-30.fits  ngc346_LL2_map_15.5_NeIII.fits  ngc346_LL2_map_18.7_SIII.fits  ngc346_LL2_map_cont_16-18.fits  ngc346_LL2_map_cont_20-21.fits  ngc346_SL1_map_10.5_SIV.fits  ngc346_SL1_map_11.3_PAH.fits  ngc346_SL1_map_12.8_NeII.fits  ngc346_SL1_map_9.0_ArIII.fits  ngc346_SL1_map_cont_13-14.fits  ngc346_SL1_map_cont_8.5-10.fits  ngc346_SL2_map_6.3_PAH.fits  spitzer-lines.yaml
data-peter/: ngc346-raman-B033-peter.fits  ngc346-raman-B054-peter.fits  ngc346-raman-B080-peter.fits  ngc346-raman-B133-peter.fits  ngc346-raman-R040-peter.fits  ngc346-raman-R058-peter.fits  ngc346-raman-R087-peter.fits  ngc346-raman-R136-peter.fits
(+3656 files in other folders)
