[project]
name = "muse-hii-regions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "astropy>=5.0.4",
    "astroquery>=0.4.11",
    "cmasher>=1.6.3",
    "corner>=2.2.1",
    "matplotlib>=3.5.1",
    "mpdaf==3.5",		# pin: version 3.6 seems totally broken
    "numpy>=1.22.3<2.0",	# pin: mpdaf 3.5 is incompatible with numpy 2.0
    "pandas>=1.4.2",
    "pyneb>=1.1.15",
    "regions>=0.10",
    "reproject>=0.8",
    "requests>=2.27.1",
    "seaborn>=0.11.2",
    "tetrabloks",
    "typer>=0.19.2",
    "wcsfile",
    "whispy",
]

[tool.uv.sources]
whispy = { git = "https://github.com/will-henney/whispy.git" }
tetrabloks = { git = "https://github.com/will-henney/tetrabloks.git" }
wcsfile = { git = "https://github.com/will-henney/wcsfile.git" }
